--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
   "name": "racs-items",
+  "main":"server.js",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "firebase deploy --only functions,hosting",
+    "start": "next start"
   },
   "dependencies": {
     "@chainlink/contracts": "^0.4.1",
     "@openzeppelin/contracts": "^4.6.0",
+    "@truffle/hdwallet-provider": "^2.0.8",
+    "axios": "^0.27.2",
+    "ethers": "^5.6.7",
+    "firebase": "^9.8.1",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "web3modal": "^1.9.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
